Completed programming assignment1 CS 221

--- a/221ProgrammingAssignment1/221ProgrammingAssignment1.vcxproj.filters
+++ b/221ProgrammingAssignment1/221ProgrammingAssignment1.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BookRecord.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="221ProgrammingAssignment1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BookRecord.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
